块默认参数
Signed-off-by: access <kevinlandun@gmail.com>

--- a/go_web/day03/web01_actions/define2.html
+++ b/go_web/day03/web01_actions/define2.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-{{template "content"}}
+    <!-- {{template "content" .}} -->
+    <!-- 块动作 相当于一个默认的模板  -->
+    {{block "content" .}}
+    你的年龄是假的吧
+    {{end}}
 </body>
 
 </html>
